kommentator funktion
